@@ -1,6 +1,6 @@
 // L2TPNS Clustering Stuff
 
-char const *cvs_id_cluster = "$Id: cluster.c,v 1.26.2.4 2005-04-01 08:54:12 bodea Exp $";
+char const *cvs_id_cluster = "$Id: cluster.c,v 1.26.2.5 2005-05-02 09:03:27 bodea Exp $";
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -1031,7 +1031,9 @@ static int cluster_handle_bytes(char *data, int size)
 
 		session[b->sid].cin += b->in;
 		session[b->sid].cout += b->out;
-		session[b->sid].last_packet = time_now; // Reset idle timer!
+
+		if (b->in)
+			session[b->sid].last_packet = time_now; // Reset idle timer!
 
 		size -= sizeof(*b);
 		++b;
