@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Fri Apr 1 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17-1
+* Mon May 2 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17-1
 - 2.0.17 release, see /usr/share/doc/l2tpns-2.0.17/Changes
