@@ -1,6 +1,10 @@
-* Fri Apr 1 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17
+* Mon May 2 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17
 - Only send RADIUS stop record in sessionshutdown when there's an ip address.
-- Reset .die on master takeover.
+- Reset .die on master takeover (so that dying sessions don't have to
+  hang around until the new master has the same uptime as the old one).
+- Update .last_packet in cluster_handle_bytes only when there have
+  been bytes received from the modem (dead sessions were having the
+  idle timeout reset by stray packets).
 
 * Mon Feb 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.16
 - Ensure that sessionkill is not called on an unopened session (borks
